# task-manager-fastapi-sqlalchemy

./: README.md  pyproject.toml  task_manager.db
app/: __init__.py
src/task_manager/: crud_task.py  crud_user.py  database.py  main.py
src/task_manager/models/: models.py
src/task_manager/schema/: schemas.py
src/task_manager/services/: task.py  user.py
