[tool.poetry]
name = "task-manager-fastapi-sqlalchemy"
version = "0.1.0"
description = "A FastAPI Task Manager using SQLAlchemy and SQLite"
authors = ["amankadam-coditas"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"